--- a/style.css
+++ b/style.css
@@ -3808,7 +3808,8 @@ header {
     margin-left: 20px;
     margin-right: 20px;
     width: calc(33.33333% - 40px);
-    margin-bottom: 32px; }
+    margin-bottom: 32px;
+    z-index: 1; }
     @media screen and (max-width: 990px) {
       .hero__description {
         width: calc(66.66667% - 40px); } }
