--- a/style.css
+++ b/style.css
@@ -3586,10 +3586,11 @@ a {
   -webkit-transition: all 0.3s cubic-bezier(0.37, 0, 0.63, 1);
   -o-transition: all 0.3s cubic-bezier(0.37, 0, 0.63, 1);
   transition: all 0.3s cubic-bezier(0.37, 0, 0.63, 1);
-  font-size: 16px;
-  font-family: "gt", sans-serif;
-  font-weight: normal;
-  line-height: 1; }
+  text-align: center;
+  font-size: 16px; }
+  @media screen and (max-width: 560px) {
+    .button {
+      font-size: 12px; } }
   .button:hover {
     -webkit-transform: translateY(-3px);
         -ms-transform: translateY(-3px);
@@ -3781,6 +3782,17 @@ header {
           align-items: center;
   position: relative;
   color: #fff; }
+  .hero__overlay {
+    background: #1d1d1e;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: 0.6;
+    display: none; }
+    @media screen and (max-width: 990px) {
+      .hero__overlay_mobile {
+        display: block; } }
   .hero__title {
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
@@ -3813,6 +3825,9 @@ header {
     @media screen and (max-width: 990px) {
       .hero__description {
         width: calc(66.66667% - 40px); } }
+    @media screen and (max-width: 560px) {
+      .hero__description {
+        width: calc(100% - 40px); } }
   .hero__advantages {
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
@@ -3880,9 +3895,9 @@ header {
   transition: all .3s ease-in-out; }
   @media screen and (max-width: 780px) {
     .advantage {
-      -webkit-flex-shrink: 0;
-          -ms-flex-negative: 0;
-              flex-shrink: 0; } }
+      -webkit-flex-shrink: 1;
+          -ms-flex-negative: 1;
+              flex-shrink: 1; } }
   .advantage:hover {
     -webkit-transform: translateY(-2px);
         -ms-transform: translateY(-2px);
@@ -3985,18 +4000,18 @@ section {
   @media screen and (max-width: 990px) {
     .simple-text {
       margin-right: calc(0% + 20px); } }
-  @media screen and (max-width: 780px) {
+  @media screen and (max-width: 990px) {
     .simple-text {
       padding-bottom: 75px;
       height: auto; } }
   .simple-text:first-of-type {
     margin-top: 300px; }
-    @media screen and (max-width: 780px) {
+    @media screen and (max-width: 990px) {
       .simple-text:first-of-type {
         margin-top: 0px; } }
   .simple-text:last-of-type {
     margin-bottom: 500px; }
-    @media screen and (max-width: 780px) {
+    @media screen and (max-width: 990px) {
       .simple-text:last-of-type {
         margin-bottom: 0px; } }
   .simple-text:last-of-type .simple-text__line {
@@ -4152,11 +4167,16 @@ section {
   margin-bottom: 40px; }
   @media screen and (max-width: 780px) {
     .features {
-      -ms-grid-columns: 1fr 16px 1fr;
+      -ms-grid-columns: 1fr 8px 1fr;
       grid-template-columns: 1fr 1fr;
           grid-template-areas: 'title title';
-      grid-column-gap: 16px;
-      padding: 20px; } }
+      grid-column-gap: 8px;
+      padding: 16px; } }
+  @media screen and (max-width: 780px) and (max-width: 360px) {
+    .features {
+      -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+          grid-template-areas: 'title'; } }
   .features__title {
     -ms-grid-row: 1;
     -ms-grid-column: 1;
@@ -4198,6 +4218,9 @@ section {
         margin-bottom: 12px; } }
   .features__text {
     margin: 0px; }
+    @media screen and (max-width: 780px) {
+      .features__text {
+        font-size: 14px; } }
 
 .flats-price {
   -webkit-box-sizing: border-box;
@@ -4250,6 +4273,15 @@ section {
     -ms-grid-column: 1;
     -ms-grid-column-span: 3; }
     .flats-price > .flats-price__title {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1; } }
+  @media screen and (max-width: 780px) and (max-width: 360px) {
+    .features__title {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1; }
+    .flats-price__title {
     -ms-grid-row: 1;
     -ms-grid-column: 1;
     -ms-grid-column-span: 1; } }
@@ -4702,6 +4734,9 @@ input[type="submit"] {
     -webkit-transition: all .4s ease-in-out;
     -o-transition: all .4s ease-in-out;
     transition: all .4s ease-in-out; }
+    @media screen and (max-width: 560px) {
+      .stories-video-wrapper__play, .stories-video-wrapper__pause {
+        bottom: -13px; } }
   .stories-video-wrapper__pause {
     bottom: -350px; }
   .stories-video-wrapper_play .stories-video-wrapper__pic {
@@ -4735,6 +4770,9 @@ input[type="submit"] {
     color: #dc4641;
     margin-bottom: 30px;
     font-weight: bold; }
+    @media screen and (max-width: 1100px) {
+      .introduction-item__number {
+        font-size: 77px; } }
   .introduction-item__text {
     font-size: 18px;
     font-family: "gt", sans-serif;
@@ -4910,8 +4948,11 @@ input[type="submit"] {
         -webkit-box-ordinal-group: 1;
         -webkit-order: 0;
             -ms-flex-order: 0;
-                order: 0;
-        margin-bottom: 24px; } }
+                order: 0; } }
+
+.slider-wrapper_mobile {
+  position: relative;
+  margin-bottom: 24px; }
 
 .case-slider-arrows {
   position: absolute;
@@ -4938,6 +4979,13 @@ input[type="submit"] {
     left: 16px; }
   .case-slider-arrows__right {
     right: 16px; }
+  .case-slider-arrows_mobile {
+    display: none; }
+    @media screen and (max-width: 990px) {
+      .case-slider-arrows_mobile {
+        display: block;
+        position: absolute;
+        width: 89%; } }
 
 .case-number-item__title {
   font-size: 14px;
