--- a/style.css
+++ b/style.css
@@ -3842,6 +3842,9 @@ header {
     z-index: 1; }
     @media screen and (max-width: 990px) {
       .hero__advantages {
+        width: calc(66.66667% - 40px); } }
+    @media screen and (max-width: 780px) {
+      .hero__advantages {
         width: calc(100% - 40px); } }
     @media screen and (max-width: 990px) {
       .hero__advantages {
@@ -4122,6 +4125,12 @@ section {
   background: #fff; }
   @media screen and (max-width: 990px) {
     .profitable-item {
+      width: calc(50% - 40px); } }
+  @media screen and (max-width: 780px) {
+    .profitable-item {
+      width: calc(50% - 40px); } }
+  @media screen and (max-width: 560px) {
+    .profitable-item {
       width: calc(100% - 40px); } }
   @media screen and (max-width: 990px) {
     .profitable-item {
@@ -4134,7 +4143,7 @@ section {
     margin-bottom: 50px; }
     @media screen and (max-width: 1260px) {
       .profitable-item__number {
-        font-size: 90px; } }
+        font-size: 83px; } }
   .profitable-item__title {
     margin-bottom: 20px; }
   .profitable-item__text {
@@ -4237,7 +4246,7 @@ section {
   grid-column-gap: 24px;
   grid-row-gap: 16px;
   margin-bottom: 40px; }
-  @media screen and (max-width: 780px) {
+  @media screen and (max-width: 560px) {
     .flats-price {
       -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
@@ -4266,17 +4275,18 @@ section {
     .flats-price__title {
     -ms-grid-row: 1;
     -ms-grid-column: 1;
-    -ms-grid-column-span: 3; }
-    .flats-price > .flats-price__title {
-    -ms-grid-row: 1;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1; } }
+    -ms-grid-column-span: 3; } }
   @media screen and (max-width: 780px) and (max-width: 360px) {
     .features__title {
     -ms-grid-row: 1;
     -ms-grid-column: 1;
     -ms-grid-column-span: 1; }
     .flats-price__title {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1; } }
+  @media screen and (max-width: 560px) {
+    .flats-price > .flats-price__title {
     -ms-grid-row: 1;
     -ms-grid-column: 1;
     -ms-grid-column-span: 1; } }
@@ -4582,7 +4592,7 @@ input[type="submit"] {
   grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 20px;
   margin-bottom: 40px; }
-  @media screen and (max-width: 780px) {
+  @media screen and (max-width: 560px) {
     .iphone-wrapper {
       -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
@@ -4670,7 +4680,7 @@ input[type="submit"] {
   -ms-grid-columns: 1fr 1fr 1fr;
   grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 20px; }
-  @media screen and (max-width: 780px) {
+  @media screen and (max-width: 560px) {
     .stories-video-wrapper {
       -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
@@ -4719,7 +4729,7 @@ input[type="submit"] {
     z-index: 2;
     width: 100%;
     left: 0; }
-    @media screen and (max-width: 780px) {
+    @media screen and (max-width: 560px) {
       .stories-video-wrapper__control {
         bottom: 24%; } }
   .stories-video-wrapper__play, .stories-video-wrapper__pause {
@@ -4729,8 +4739,13 @@ input[type="submit"] {
     -webkit-transition: all .4s ease-in-out;
     -o-transition: all .4s ease-in-out;
     transition: all .4s ease-in-out; }
+    @media screen and (max-width: 1025px) {
+      .stories-video-wrapper__play, .stories-video-wrapper__pause {
+        left: 37%;
+        bottom: -23px; } }
     @media screen and (max-width: 560px) {
       .stories-video-wrapper__play, .stories-video-wrapper__pause {
+        left: 42%;
         bottom: -13px; } }
   .stories-video-wrapper__pause {
     bottom: -350px; }
@@ -4757,6 +4772,12 @@ input[type="submit"] {
   text-align: center;
   margin-bottom: 30px; }
   @media screen and (max-width: 990px) {
+    .introduction-item {
+      width: calc(50% - 40px); } }
+  @media screen and (max-width: 780px) {
+    .introduction-item {
+      width: calc(50% - 40px); } }
+  @media screen and (max-width: 560px) {
     .introduction-item {
       width: calc(100% - 40px); } }
   .introduction-item__number {
@@ -5037,8 +5058,11 @@ input[type="submit"] {
           flex-grow: 0; }
   @media screen and (max-width: 990px) {
     .review-stories {
-      width: calc(50% - 40px); } }
+      width: calc(25% - 40px); } }
   @media screen and (max-width: 780px) {
+    .review-stories {
+      width: calc(50% - 40px); } }
+  @media screen and (max-width: 560px) {
     .review-stories {
       width: calc(83.33333% - 40px); } }
   .review-stories video {
