--- a/style.css
+++ b/style.css
@@ -4437,13 +4437,22 @@ section {
 .wpcf7 form.sent .wpcf7-response-output {
   background: #dc4641;
   color: #ffffff;
-  border: none; }
+  border: none;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
 
 .wpcf7-not-valid-tip {
-  font-size: 12px;
-  position: absolute;
-  bottom: 0px;
-  width: 300px; }
+  font-size: 12px; }
 
 .wpcf7-form-control-wrap {
   position: relative; }
@@ -4757,6 +4766,9 @@ input[type="submit"] {
     bottom: -350px; }
   .stories-video-wrapper_play .stories-video-wrapper__pause {
     bottom: -150px; }
+    @media screen and (max-width: 560px) {
+      .stories-video-wrapper_play .stories-video-wrapper__pause {
+        bottom: -113px; } }
 
 .introduction-item {
   -webkit-box-sizing: border-box;
