--- a/style.css
+++ b/style.css
@@ -4699,9 +4699,13 @@ input[type="submit"] {
             box-shadow: -2px 8px 32px rgba(0, 0, 0, 0.06);
     border-radius: 16px;
     position: relative;
-    overflow: hidden; }
+    overflow: hidden;
+    height: 450px; }
+    @media screen and (max-width: 780px) {
+      .stories-video-wrapper__item {
+        height: 500px; } }
   .stories-video-wrapper__pic {
-    height: 100%;
+    height: 90%;
     background-size: cover;
     background-repeat: no-repeat;
     border-radius: 16px 16px 0px 0px;
@@ -4731,7 +4735,9 @@ input[type="submit"] {
       .stories-video-wrapper__title {
         font-size: 12px; } }
   .stories-video-wrapper video {
-    border-radius: 16px; }
+    border-radius: 16px;
+    -o-object-fit: cover;
+       object-fit: cover; }
   .stories-video-wrapper__control {
     position: absolute;
     bottom: 38%;
