--- a/style.css
+++ b/style.css
@@ -4181,8 +4181,7 @@ section {
   grid-template-columns: 1fr 1fr 1fr;
       grid-template-areas: 'title title title';
   grid-column-gap: 50px;
-  grid-row-gap: 16px;
-  margin-bottom: 40px; }
+  grid-row-gap: 16px; }
   @media screen and (max-width: 780px) {
     .features {
       -ms-grid-columns: 1fr 8px 1fr;
@@ -4239,6 +4238,9 @@ section {
     @media screen and (max-width: 780px) {
       .features__text {
         font-size: 14px; } }
+
+#flats-price {
+  padding-top: 40px; }
 
 .flats-price {
   -webkit-box-sizing: border-box;
