--- a/style.css
+++ b/style.css
@@ -3763,7 +3763,6 @@ header {
     padding: 10px 0px; }
 
 .hero {
-  padding: 150px 0px;
   background-size: cover;
   background-position: center right;
   background-color: #1d1d1e;
@@ -3776,7 +3775,8 @@ header {
       -ms-flex-align: center;
           align-items: center;
   position: relative;
-  color: #fff; }
+  color: #fff;
+  min-height: 100vh; }
   .hero__overlay {
     background: #1d1d1e;
     position: absolute;
@@ -3915,11 +3915,11 @@ header {
         font-size: 10px; } }
 
 section {
-  margin-bottom: calc(136px / 1.5);
-  padding-top: calc(136px / 1.5); }
+  margin-bottom: calc(136px / 2);
+  padding-top: calc(136px / 2); }
   @media screen and (max-width: 780px) {
     section {
-      margin-bottom: calc(136px / 2); } }
+      margin-bottom: calc(136px / 3); } }
 
 .simple {
   position: relative; }
@@ -4116,7 +4116,8 @@ section {
   -webkit-box-shadow: -2px 8px 32px rgba(0, 0, 0, 0.06);
           box-shadow: -2px 8px 32px rgba(0, 0, 0, 0.06);
   border-radius: 4px;
-  background: #fff; }
+  background: #fff;
+  text-align: center; }
   @media screen and (max-width: 990px) {
     .profitable-item {
       width: calc(50% - 40px); } }
@@ -4185,6 +4186,9 @@ section {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   -ms-grid-column-span: 5; }
+    @media screen and (max-width: 780px) {
+      .features__title {
+        text-align: center; } }
   .features__item {
     display: -webkit-box;
     display: -webkit-flex;
@@ -4267,32 +4271,10 @@ section {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   -ms-grid-column-span: 5; }
-  @media screen and (max-width: 780px) {
-    .features__title {
-    -ms-grid-row: 1;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 3; }
-    .flats-price__title {
-    -ms-grid-row: 1;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 3; } }
-  @media screen and (max-width: 780px) and (max-width: 360px) {
-    .features__title {
-    -ms-grid-row: 1;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1; }
-    .flats-price__title {
-    -ms-grid-row: 1;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1; } }
-  @media screen and (max-width: 560px) {
-    .flats-price > .flats-price__title {
-    -ms-grid-row: 1;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1; } }
     @media screen and (max-width: 780px) {
       .flats-price__title {
-        padding-right: 0%; } }
+        padding-right: 0%;
+        text-align: center; } }
 
 .flats-price-item {
   background-color: #f9f9fa;
@@ -4304,6 +4286,9 @@ section {
     font-family: "gt", sans-serif;
     font-weight: bold;
     margin-bottom: 8px; }
+    @media screen and (max-width: 780px) {
+      .flats-price-item__title {
+        text-align: center; } }
   .flats-price-item__sq {
     font-size: 18px;
     line-height: 18px;
@@ -4529,6 +4514,51 @@ input[type="submit"] {
         padding-top: 0px; } }
   .functionality-content__media {
     display: none; }
+  .functionality-content__title {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 5;
+    margin-bottom: 24px;
+    grid-area: title; }
+  .flats-price > .functionality-content__title {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 5; }
+  @media screen and (max-width: 780px) {
+    .features__title {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3; }
+    .flats-price__title {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3; }
+    .functionality-content__title {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3; } }
+  @media screen and (max-width: 780px) and (max-width: 360px) {
+    .features__title {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1; }
+    .flats-price__title {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1; }
+    .functionality-content__title {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1; } }
+  @media screen and (max-width: 560px) {
+    .flats-price > .flats-price__title {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1; }
+    .flats-price > .functionality-content__title {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1; } }
 
 .tab-media_active {
   display: block; }
