--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
- Theme Name: MazhordomTheme
+ Theme Name: MazhordomThemeNew
  Author: Alexandr Schetinin
  Author URI: https://www.bristl.com
  Version: 1.0
