--- a/style.css
+++ b/style.css
@@ -4595,7 +4595,13 @@ input[type="submit"] {
       -webkit-box-direction: normal;
       -webkit-flex-direction: column;
           -ms-flex-direction: column;
-              flex-direction: column; } }
+              flex-direction: column;
+      padding: 8px;
+      background-color: #ffffff;
+      border-radius: 8px; } }
+  @media screen and (min-width: 320px) {
+    .tab {
+      padding: 4px; } }
   .tab:hover {
     color: #dc4641;
     cursor: pointer;
@@ -4605,6 +4611,10 @@ input[type="submit"] {
   .tab_active {
     color: #dc4641;
     opacity: 1; }
+    @media screen and (max-width: 780px) {
+      .tab_active {
+        -webkit-box-shadow: 0px 0px 2px rgba(220, 70, 65, 0.9);
+                box-shadow: 0px 0px 2px rgba(220, 70, 65, 0.9); } }
   .tab_active svg {
     fill: #dc4641 !important; }
   .tab__icon {
